--- a/donar.html
+++ b/donar.html
@@ -83,6 +83,20 @@
     </div>
   </main>
 
+  <!-- separador -->
+  <div class="container-fluid">
+    <div class="row align-items-center pt-4 pb-4 ps-5 pe-5">
+        <div class="col-lg-12 col-md-12 col-sm-12">
+            <div class="separador"></div>
+        </div>
+    </div>
+</div>
+
+  <section class="container-fluid p-5">
+    <div class="container d-flex justify-content-center"></div>
+    <h2 class="article__h2 text-center "> ¡Para más información o dudas comunícate al <span class="article__h2--primary"> 0800 444 555!</span></h2>
+  </section>
+
   <!-- footer -->
 
   <footer class="bottom p-4">
@@ -122,6 +136,18 @@
         </div>
       </div>
     </div>
+
+    <!-- separador -->
+    <div class="container-fluid">
+      <div class="row align-items-center pt-4 pb-4 ps-5 pe-5">
+        <div class="col-lg-12 col-md-12 col-sm-12">
+          <div class="separador__footer"></div>
+        </div>
+      </div>
+    </div>
+
+    <p class=" text-center text-white"> Design by: Jonathan F. K. Villagra © 2021 </p>
+
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"
