--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
   <meta name="description"
     content="» Hemotuc es la Fundación para el Estudio y lucha De Enfermedades Hemato-oncológicas">
 
-    <!-- ico -->
-    <link rel="icon" href="./multimedia/img/foundation__ico.ico">
+  <!-- ico -->
+  <link rel="icon" href="./multimedia/img/foundation__ico.ico">
 
 </head>
 
@@ -270,6 +270,18 @@
           </div>
         </div>
       </div>
+
+      <!-- separador -->
+      <div class="container-fluid">
+        <div class="row align-items-center pt-4 pb-4 ps-5 pe-5">
+          <div class="col-lg-12 col-md-12 col-sm-12">
+            <div class="separador__footer"></div>
+          </div>
+        </div>
+      </div>
+
+      <p class=" text-center text-white"> Design by: Jonathan F. K. Villagra © 2021 </p>
+
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"
