--- a/voluntariado.html
+++ b/voluntariado.html
@@ -91,7 +91,7 @@
                         <p class="card-text text-center">Ayudanos a ayudar, sumate como voluntario a la fundación</p>
                     </div>
                     <div class="container-fluid d-flex justify-content-center mt-2">
-                        <a href="./donar.html" class="nav__button">+Info</a>
+                        <a href="#" class="nav__button">+ Info</a>
                     </div>
                 </div>
             </div>
@@ -110,7 +110,7 @@
                         <p class="card-text text-center">Forma parte de la campaña de donación de sangre</p>
                     </div>
                     <div class="container-fluid d-flex justify-content-center mt-2">
-                        <a href="./donar.html" class="vol__buttom--yellow">+Info</a>
+                        <a href="#" class="vol__buttom--yellow">+ Info</a>
                     </div>
                 </div>
             </div>
@@ -129,7 +129,7 @@
                         <p class="card-text text-center">Forma parte del registro de donantes de médula ósea</p>
                     </div>
                     <div class="container-fluid d-flex justify-content-center mt-2">
-                        <a href="./donar.html" class="vol__buttom--blue">+ Info</a>
+                        <a href="#" class="vol__buttom--blue">+ Info</a>
                     </div>
                 </div>
             </div>
@@ -203,43 +203,54 @@
 
     <footer class="bottom p-4">
         <div class="container">
-            <div class="row d-flex align-items-center">
-                <div class="col-lg-3 col-md-12 col-sm-12 footer__col--l">
-                    <div class="nombreFundacion">FUNDACIÓN <span class="nombreFundacion__bold">HEMOTUC</span> </div>
-                    <div class="misc__white"></div>
-                    <p class=" text-white ">Fundación Hemotuc es una organización ficticia creada como proyecto final
-                        del curso
-                        de front-end de CoderHouse.</p>
-                    <div class="footer___socialMedia">
-                        <a href="#" class="me-1"><img src="./multimedia/svg/iconFacebook.svg" alt="facebook"></a>
-                        <a href="#" class="ms-1 me-1"><img src="/multimedia/svg/iconInstagram.svg" alt="instagram"></a>
-                        <a href="#" class="ms-1"><img src="/multimedia/svg/iconWhatsapp.svg" alt="whatsapp"></a>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-12 col-sm-12  footer__col--ctr">
-                    <div class="footer__direction d-flex">
-                        <img src="./multimedia/svg/iconMapMarker.svg" alt="">
-                        <div class=" text-white ms-2">Calle N°452 - San Miguel de Tucumán</div>
-                    </div>
-                    <div class="footer__mail d-flex">
-                        <img src="./multimedia/svg/iconMail.svg" alt="">
-                        <div class=" text-white ms-2">fundacionhemotuc@gmail.com</div>
-                    </div>
-                </div>
-                <div class="col-lg-5 col-md-12 col-sm-12 footer__col--r">
-                    <div class="container__footer--ul">
-                        <ul class="footer__ul">
-                            <li><a href="./index.html">Home</a></li>
-                            <li><a href="/nosotros.html">Nosotros</a></li>
-                            <li><a href="./voluntariado.html">Voluntariado</a></li>
-                            <li><a href="./contacto.html">Contacto</a></li>
-                            <li><a href="./donar.html">Donar</a></li>
-                        </ul>
-                    </div>
-                </div>
+          <div class="row d-flex align-items-center">
+            <div class="col-lg-3 col-md-12 col-sm-12 footer__col--l">
+              <div class="nombreFundacion">FUNDACIÓN <span class="nombreFundacion__bold">HEMOTUC</span> </div>
+              <div class="misc__white"></div>
+              <p class=" text-white ">Fundación Hemotuc es una organización ficticia creada como proyecto final del curso
+                de front-end de CoderHouse.</p>
+              <div class="footer___socialMedia">
+                <a href="#" class="me-1"><img src="./multimedia/svg/iconFacebook.svg" alt="facebook"></a>
+                <a href="#" class="ms-1 me-1"><img src="/multimedia/svg/iconInstagram.svg" alt="instagram"></a>
+                <a href="#" class="ms-1"><img src="/multimedia/svg/iconWhatsapp.svg" alt="whatsapp"></a>
+              </div>
             </div>
+            <div class="col-lg-4 col-md-12 col-sm-12  footer__col--ctr">
+              <div class="footer__direction d-flex">
+                <img src="./multimedia/svg/iconMapMarker.svg" alt="">
+                <div class=" text-white ms-2">Calle N°452 - San Miguel de Tucumán</div>
+              </div>
+              <div class="footer__mail d-flex">
+                <img src="./multimedia/svg/iconMail.svg" alt="">
+                <div class=" text-white ms-2">fundacionhemotuc@gmail.com</div>
+              </div>
+            </div>
+            <div class="col-lg-5 col-md-12 col-sm-12 footer__col--r">
+              <div class="container__footer--ul">
+                <ul class="footer__ul">
+                  <li><a href="./index.html">Home</a></li>
+                  <li><a href="/nosotros.html">Nosotros</a></li>
+                  <li><a href="./voluntariado.html">Voluntariado</a></li>
+                  <li><a href="./contacto.html">Contacto</a></li>
+                  <li><a href="./donar.html">Donar</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
         </div>
-    </footer>
+  
+        <!-- separador -->
+        <div class="container-fluid">
+          <div class="row align-items-center pt-4 pb-4 ps-5 pe-5">
+            <div class="col-lg-12 col-md-12 col-sm-12">
+              <div class="separador__footer"></div>
+            </div>
+          </div>
+        </div>
+  
+        <p class=" text-center text-white"> Design by: Jonathan F. K. Villagra © 2021 </p>
+  
+      </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"
         integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG"
